kafka-streams/matches-aggregator.svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks-matches
    app.kubernetes.io/component: ks-matches
    app.kubernetes.io/instance: ks-matches
  name: ks-matches
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: ks-matches
  sessionAffinity: None
  type: ClusterIP
