kafka-streams/player-aggregator.svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks-players
    app.kubernetes.io/component: ks-players
    app.kubernetes.io/instance: ks-players
  name: ks-players
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: ks-players
  sessionAffinity: None
  type: ClusterIP
