kafka-streams/player-aggregator.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ks-players
    app.kubernetes.io/component: ks-players
    app.kubernetes.io/instance: ks-players
  name: ks-players
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ks-players
    weight: 100
  wildcardPolicy: None
